fix Grove snapshot freshness
